testcases/errors/056_VoidPointer3_CE.c
int main() {
    void (*a)[10];
    return 0;
}